k8s/mainfest/vikunja/overlays/dev/patches/deployment-vikunja.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja
spec:
  revisionHistoryLimit: 3
  replicas: 2
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: tier
                    operator: In
                    values:
                      - apps
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - arm64
        # podAntiAffinity:
        #   requiredDuringSchedulingIgnoredDuringExecution:
        #     - labelSelector:
        #         matchLabels:
        #           app.kubernetes.io/name: vikunja
        #       topologyKey: "kubernetes.io/hostname"
      containers:
        - name: vikunja
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: vikunja
