k8s/mainfest/vikunja/overlays/dev/patches/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vikunja
spec:
  rules:
    - host: vikunja.qa.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vikunja
                port:
                  number: 3456
